[package]
name = "photonix"
version = "0.1.0"
authors = ["bsoptei <bsoptei@gmail.com>"]
description = "Optics traits with the functionality of lenses."
license = "MIT"
edition = "2018"
repository = "https://github.com/bsoptei/photonix"

[dependencies]
photonix_derive = { path = "../photonix_derive" }